--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
   <div id="main">
 
-    <nav><ul>
+    <!--<nav><ul>
       {% for node in site.posts reversed %}
         {% capture id %}{{ node.id | remove:'/' | downcase }}{% endcapture %}
         <li class="p-{{id}}"><a href="#{{id}}">{{node.title}}</a></li>
       {% endfor %}
-    </ul></nav>
+    </ul></nav>-->
 
 
     {% for page in site.posts reversed %}
@@ -41,7 +41,7 @@
           </span>
           <h5 class="icon-title">{{ page.title }}</h5>
         </div>
-        {% endif %}
+        {% endif %} 
         <div class="container {{ page.style }}">
           {{ page.content }}
         </div>
